<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_font_query"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="120dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    app:cardElevation="8dp">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/download_font_inputs_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/family_name_input_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/bottom_sheet_top_margin"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/auto_complete_family_name_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_family_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:hint="@string/family_name"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_request"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/redondeado"
                    android:text="@string/buscar" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/width_input_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/width_seekbar_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="Ancho"
                    android:textColor="@color/accent"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/width_seekbar_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/seek_bar_width"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textview_width"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:gravity="end"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weight_input_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weight_seekbar_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/peso"
                    android:textColor="@color/accent"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/weight_seekbar_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/seek_bar_weight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textview_weight"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:gravity="end"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/italic_input_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/italic_seekbar_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="Italica"
                    android:textColor="@color/accent"
                    android:textSize="12sp" />

                <LinearLayout
                    android:id="@+id/italic_seekbar_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <SeekBar
                        android:id="@+id/seek_bar_italic"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textview_italic"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:gravity="end"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_best_effort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_medium"
                android:checked="true"
                android:text="@string/best_effort" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.v7.widget.CardView>
