<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondotodo"
    tools:context=".Main2Activity"
    tools:layout_editor_absoluteY="56dp"
    android:orientation="vertical"
    tools:showIn="@layout/activity_screen_uno">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="416dp"
        android:layout_height="57dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/naranja1"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="Usuario"
        android:textColor="@color/colorA"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <ImageView
        android:id="@+id/fondoblanco"
        android:layout_width="323dp"
        android:layout_height="675dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/fondob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:srcCompat="@drawable/fondob" />

    <ImageView
        android:id="@+id/opciones"
        android:layout_width="5dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="perfil"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@+id/Header"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/opciones" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:text="@string/app_name"
        android:textColor="@color/naranjafuente"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/fondoblanco"
        app:layout_constraintStart_toStartOf="@+id/fondoblanco"
        app:layout_constraintTop_toTopOf="@+id/fondoblanco" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/naranjafuente"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/fondoblanco"
        app:layout_constraintStart_toStartOf="@+id/fondoblanco"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/transparent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="@+id/fondoblanco"
        app:layout_constraintStart_toStartOf="@+id/fondoblanco"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="224dp"
        android:layout_height="217dp"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/naranjafondos"
        app:layout_constraintBottom_toTopOf="@+id/nameTextView"
        app:layout_constraintEnd_toEndOf="@+id/fondoblanco"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/fondoblanco"
        app:layout_constraintTop_toTopOf="@+id/fondoblanco"
        app:layout_constraintVertical_bias="0.827" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="logOut"
        android:text="@string/salir"
        android:background="@drawable/redondeado"
        android:textColor="@color/naranjafuente"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="@+id/fondoblanco"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/fondoblanco"
        app:layout_constraintTop_toTopOf="@+id/fondoblanco"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:text="@string/revoke"
        android:textColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/fondoblanco"
        app:layout_constraintStart_toStartOf="@+id/fondoblanco"
        tools:layout_editor_absoluteY="602dp" />



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="420dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="46dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_camara"
        android:textColor="@color/negro"
        android:text="Foto"
        android:textSize="8sp"
        android:onClick="camara"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toStartOf="@+id/fondoblanco"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_buscar"
        android:textColor="@color/negro"
        android:text="Buscar"
        android:textSize="8sp"
        android:onClick="buscar"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/button7"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_perfil"
        android:textColor="@color/negro"
        android:text="Perfil"
        android:textSize="8sp"
        android:onClick="usuario"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button8"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_historial_1"
        android:textColor="@color/negro"
        android:text="Historial"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button9"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_favoritos_1"
        android:textColor="@color/negro"
        android:text="Favoritos"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="@+id/fondoblanco"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:onClick="volver"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintEnd_toStartOf="@+id/Header"
        app:layout_constraintStart_toStartOf="@+id/toolbar3"
        app:layout_constraintTop_toTopOf="@+id/toolbar3"
        app:srcCompat="@drawable/atras" />


</android.support.constraint.ConstraintLayout>